--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* nav style start */
+.navbar{
+    background: linear-gradient(to right, rgb(54, 51, 48), rgb(100, 124, 139));
+    color: white;
+}
+/* nav style end */
+
+/* home style start */
+.home, .details{
+    padding: 0 60px;
+    background-color: gray;
+}
+.card{
+    background-color: white;
+}
+.border-left{
+    border-left: 12px solid rgb(100, 124, 139);
+    padding-left: 10px;
+}
+/* home style end */
+
+/* button style start */
+.btn{
+  text-transform: uppercase;
+  padding: 3px 20px;
+  display: inline-block;
+  border-radius: 100px; 
+  background: rgb(100, 124, 139);
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn:hover {
+  transform: translateY(-7px);
+  box-shadow: 0 10px 20px rgba(100, 124, 139, 0.3); 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn:active {
+  transform: translateY(-3px);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* button style end */
